--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-plugin-implicit-dependencies": "1.0.4",
     "eslint-plugin-import": "2.20.1",
     "eslint-plugin-jest": "23.6.0",
+    "eslint-plugin-node": "11.0.0",
     "eslint-plugin-prettier": "3.1.2",
     "eslint-plugin-react": "7.17.0",
     "eslint-plugin-react-hooks": "2.3.0"
