--- a/package.json
+++ b/package.json
@@ -9,8 +9,21 @@
     "typescript.js",
     "node.js"
   ],
+  "engines": {
+    "node": ">=8.10.0"
+  },
   "publishConfig": {
     "access": "public"
+  },
+  "eslintConfig": {
+    "plugins": [
+      "self"
+    ],
+    "extends": [
+      "plugin:self/node",
+      "plugin:self/react",
+      "plugin:self/typescript"
+    ]
   },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "2.11.0",
