--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "files": [
     "base.js",
     "react.js",
-    "react.production.js",
-    "node.js",
-    "node.production.js"
+    "typescript.js",
+    "node.js"
   ],
+  "engines": {
+    "node": ">=12.0.0"
+  },
   "publishConfig": {
     "access": "public"
   },
@@ -21,6 +23,7 @@
     "eslint-plugin-implicit-dependencies": "1.0.4",
     "eslint-plugin-import": "2.20.1",
     "eslint-plugin-jest": "23.6.0",
+    "eslint-plugin-node": "11.0.0",
     "eslint-plugin-prettier": "3.1.2",
     "eslint-plugin-react": "7.17.0",
     "eslint-plugin-react-hooks": "2.3.0"
