--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,4 +31,4 @@ jobs:
         key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
         restore-keys: |
           ${{ runner.os }}-yarn-
-    - run: yarn install --imutable
+    - run: yarn install --immutable
