--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.2.0",
   "license": "MIT",
   "description": "ESLint preset for Bitwala",
+  "scripts": {
+    "test": "eslint ."
+  },
   "files": [
     "base.js",
     "react.js",
@@ -27,5 +30,11 @@
     "eslint-plugin-prettier": "3.1.4",
     "eslint-plugin-react": "7.21.2",
     "eslint-plugin-react-hooks": "4.1.2"
+  },
+  "devDependencies": {
+    "jest": "26.6.3",
+    "prettier": "2.1.2",
+    "react": "17.0.1",
+    "typescript": "4.0.5"
   }
 }
